Add CO2emissions to output, refactor format a bit
